[project]
name = "caples-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "numpy<2.4.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pyiceberg>=0.10.0",
    "sqlalchemy>=2.0.45",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/caples_data"]
