[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "caples-data",
    "ipykernel>=7.1.0",
    "polars>=1.36.1",
    "pymc>=5.27.0",
    "pymc-experimental>=0.1.4",
]

[tool.uv.sources]
caples-data = { path = "../caples_data", editable = true }
