[project]
name = "modeling"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopandas>=1.1.2",
    "ipykernel>=7.1.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "pymc>=5.27.0",
    "pymc-experimental>=0.1.4",
    "tqdm>=4.67.1",
]

