[project]
name = "simulation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "pyjags",
    "ruff>=0.12.4",
    "tqdm>=4.67.1",
]

[tool.uv.sources]
pyjags = { git = "https://github.com/mschulist/pyjags.git", rev = "dd7afd12081a14fe0d99fb07fb5d51dd81ec5002" }
